--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,43 @@
     <title>HTML Academy: Погнали</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/100x19" alt="Логотип" width="100" height="19">
+      </a>
+      <nav class="main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            О сервисе
+          </li>
+          <li class="site-list__item">
+            Направления
+          </li>
+          <li class="site-list__item">
+            Попутчики
+          </li>
+          <li class="site-list__item">
+            Авторизация
+          </li>
+          <li class="site-list__item">
+            8 800 555-86-28
+          </li>
+          <li class="site-list__item">
+            mail@htmlacademy.ru
+          </li>
+        </ul>
+        <ul class="main-nav__social social">
+          <ul>
+            Мы в facebook
+          </ul>
+          <ul>
+            Мы а Вконтакте
+          </ul>
+          <ul>
+            Мы в instagram
+          </ul>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
